--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,12 @@ h1 {
     margin: 0;
 }
 
-.selectors {
+.theme-selector {
     display: flex;
     gap: 10px;
 }
 
-.selectors select {
+.theme-selector {
     background-color: #111;
     color: #fff;
     border: 1px solid #fff;
@@ -53,7 +53,7 @@ h1 {
     border-radius: 5px;
 }
 
-.selectors select:hover {
+.theme-selector select:hover {
     background-color: #222;
 }
 
